--- a/data_simulation/.env
+++ b/data_simulation/.env
@@ -1,1 +1,14 @@
+# OpenAI API 密钥，用于身份验证
 OPENAI_API_KEY=
+
+# 是否使用自定义的 OpenAI API 基础 URL
+OPENAI_USE_BASE_URL=true
+
+# OpenAI API 的基础 URL，只有在 OPENAI_USE_BASE_URL 为 true 时才需要设置
+OPENAI_BASE_URL=
+
+# 默认使用的 OpenAI 模型
+OPENAI_MODEL=gpt-5-nano
+
+# 备用模型列表，如果默认模型不可用，将会尝试这些模型。列表用逗号分隔
+OPENAI_FALLBACK_MODELS=
